# rlf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
crates/rlf/: Cargo.toml
crates/rlf-cli/: Cargo.toml
crates/rlf-cli/src/: main.rs
crates/rlf-cli/src/commands/: check.rs  coverage.rs  eval.rs  mod.rs
crates/rlf-cli/src/output/: diagnostic.rs  mod.rs  table.rs
crates/rlf-macros/: Cargo.toml
crates/rlf-macros/src/: codegen.rs  input.rs  lib.rs  parse.rs  validate.rs
crates/rlf-macros/tests/: integration.rs
crates/rlf-macros/tests/fail/: arity_mismatch.rs  arity_mismatch.stderr  bare_ident_matches_param.rs  bare_ident_matches_param.stderr  cycle.rs  cycle.stderr  default_multidimensional.rs  default_multidimensional.stderr  dollar_ref_term.rs  dollar_ref_term.stderr  empty_interpolation.rs  empty_interpolation.stderr  empty_parens.rs  empty_parens.stderr  expr_in_arg.rs  expr_in_arg.stderr  from_without_params.rs  from_without_params.stderr  invalid_selector.rs  invalid_selector.stderr  match_missing_default.rs  match_missing_default.stderr  match_undeclared_param.rs  match_undeclared_param.stderr  multiple_defaults.rs  multiple_defaults.stderr  nested_call.rs  nested_call.stderr  nested_cycle.rs  nested_cycle.stderr  numeric_term_key.rs  numeric_term_key.stderr  phrase_bare_ref.rs  phrase_bare_ref.stderr  phrase_selector_no_call.rs  phrase_selector_no_call.stderr  phrase_variant_block.rs  phrase_variant_block.stderr  shadowing.rs  shadowing.stderr  (+16 more)
crates/rlf-macros/tests/pass/: auto_cap.rs  basic.rs  default_selector.rs  default_variant.rs  escape_sequences.rs  from_modifier.rs  from_modifier_transform_on_param.rs  literal_args.rs  match_keyword.rs  params.rs  phrase_calls.rs  phrase_variant_block.rs  selector_parameterized_path.rs  tags.rs  tags_after_equals.rs  transforms.rs  transforms_source_english.rs  variants.rs
crates/rlf/src/: formatter.rs  global.rs  lib.rs
crates/rlf/src/interpreter/: context.rs  error.rs  evaluator.rs  lint.rs  (+6 more)
crates/rlf/tests/: compile_tests.rs  file_parser.rs  global_locale.rs  interpreter_errors.rs  interpreter_eval.rs  interpreter_foundation.rs  interpreter_match.rs  interpreter_transforms.rs  lint.rs  load_warnings.rs  locale.rs  macro_source_parity.rs  params_macro.rs  phrase_id_locale.rs  phrase_types.rs  runtime_lint.rs  spanish_transforms.rs  string_context.rs  template_parser.rs  variant_selection_errors.rs
(+127 files in other folders)
