[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.clippy]
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
enum_glob_use = "deny"
explicit_into_iter_loop = "deny"
flat_map_option = "deny"
fn_params_excessive_bools = "deny"
from_iter_instead_of_collect = "deny"
implicit_clone = "deny"
integer_division = "deny"
iter_over_hash_type = "deny"
macro_use_imports = "deny"
manual_let_else = "deny"
match_wildcard_for_single_variants = "deny"
mut_mut = "deny"
needless_continue = "deny"
needless_for_each = "deny"
option_option = "deny"
redundant_closure_for_method_calls = "deny"
redundant_type_annotations = "deny"
ref_option_ref = "deny"
renamed_function_params = "deny"
same_name_method = "deny"
semicolon_if_nothing_returned = "deny"
semicolon_inside_block = "deny"
trait_duplication_in_bounds = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"
