[package]
name = "rlf-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
strsim = "0.11"

[features]
global-locale = []

[dev-dependencies]
trybuild = "1.0"
rlf = { path = "../rlf" }

[lints]
workspace = true
