[package]
name = "rlf"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.8"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
const-fnv1a-hash = "1.1"
winnow = "0.7"
icu_plurals = "2"
icu_locale_core = "2"
icu_casemap = "2"
unicode-segmentation = "1.12"
strsim = "0.11"
rlf-macros = { path = "../rlf-macros" }

[dev-dependencies]
insta = "1.42"
tempfile = "3"

[lints]
workspace = true
